--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.11",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "pg": "^8.7.3",
     "socket.io": "^4.5.1"
   },
   "devDependencies": {
